--- a/_config.yml
+++ b/_config.yml
@@ -91,12 +91,11 @@ page-mathjax: false
 # Friends
 friends:
   [
-    { title: "纳西妲1", href: "https://ooo.0x0.ooo/2024/09/07/Ot3sut.jpg" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
+    { title: "纳西妲", href: "https://ooo.0x0.ooo/2024/09/07/Ot3sut.jpg" },
+    { title: "纳西妲", href: "https://ooo.0x0.ooo/2024/09/07/Ot3YFx.jpg" },
+    { title: "my bilibili", href: "https://space.bilibili.com/431820998" },
+    { title: "else", href: "https://sherrywoo.me/" },
     { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
+    { title: "my senior high school", href: "https://www.ts1z.cn/index" },
+    { title: "女朋友", href: "https://ooo.0x0.ooo/2024/09/07/Ot3fPj.jpg" },
   ]
