--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,9 @@ kramdown:
       line_numbers: true
       start_line: 1
 
-# Disqus settings
-disqus_username: hux
+# Livere来必力
+labili: true
+labili_uid: MTAyMC82MDExNy8zNjU4Mw==
 
 # Netease settings
 netease_comment: false
